--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Input Affix",
+  "name": "input-affix",
   "version": "1.1.1",
   "homepage": "https://github.com/jcoc611/InputAffix",
   "authors": [
