--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "input-affix",
   "version": "1.1.1",
-  "homepage": "https://github.com/jcoc611/InputAffix",
+  "homepage": "https://github.com/tedbundyjr/InputAffix",
   "authors": [
     "Juan Camilo Osorio <jcoc611@gmail.com>"
   ],
@@ -23,7 +23,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/jcoc611/InputAffix.git"
+    "url": "git://github.com/tedbundyjr/InputAffix.git"
   },
   "dependencies": {
     "jquery": ">=1.11.3"
